# aspose-cells-python

./: README.md  pyproject.toml  requirements.txt
License/: Aspose_Split-License-Agreement_2026-01-26_WIP.txt
aspose_cells/: __init__.py  auto_filter.py  cell.py  cell_value_handler.py  cells.py  cfb_handler.py  cfb_writer.py  cfb_writer_minimal.py  comment_xml.py  conditional_format.py  csv_handler.py  data_validation.py  document_properties.py  encryption_crypto.py  encryption_params.py  hyperlink.py  json_handler.py  markdown_handler.py  shared_strings.py  style.py  workbook.py  workbook_hash_password.py  workbook_properties.py  worksheet.py  worksheet_properties.py  xlsx_encryptor.py  xml_autofilter_loader.py  xml_autofilter_saver.py  xml_conditional_format_loader.py  xml_conditional_format_saver.py  xml_datavalidation_loader.py  xml_datavalidation_saver.py  xml_hyperlink_handler.py  xml_loader.py  xml_properties_loader.py  xml_properties_saver.py  xml_saver.py
examples/: test_alignment_properties.py  test_auto_filter.py  test_border_settings.py  test_cell_protection_locked.py  test_cell_values.py  test_comment_size.py  test_comments.py  test_conditional_formatting.py  test_csv_import_export.py  test_data_validation.py  test_document_properties.py  test_encryption.py  test_fill_settings.py  test_font_settings.py  test_hyperlinks.py  test_number_formats.py  test_workbook_protection.py  test_worksheet_management.py  test_worksheet_properties.py  test_worksheet_protection.py  test_xlsx_to_json.py  test_xlsx_to_markdown.py
