[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspose-cells-foss"
version = "26.2.0"
description = "A Python library for creating, reading, and modifying Excel files (.xlsx format)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Aspose"}
]
keywords = ["excel", "xlsx", "spreadsheet", "aspose", "cells"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pycryptodome>=3.15.0",
    "olefile>=0.46",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/aspose-cells-foss/aspose-cells-python"
Documentation = "https://github.com/aspose-cells-foss/aspose-cells-python#readme"
Repository = "https://github.com/aspose-cells-foss/aspose-cells-python.git"
Issues = "https://github.com/aspose-cells-foss/aspose-cells-python/issues"

[tool.setuptools]
packages = ["aspose_cells", "examples", "License"]

[tool.setuptools.package-data]
aspose_cells = ["*.py"]
examples = ["*.py"]
License = ["*.txt"]
